tests/expectations/compiler/function/program_function_no_constant_mode_fail.out
Error [EAST0372017]: The name `foo` is defined multiple times.
    --> compiler-test:4:8
     |
   2 |       fn foo(constant a: u8) {}
     |          ^^^ previous definition of `foo` here
   3 |
   4 |       fn foo(a: u8) -> constant u8 {
     |          ^^^ `foo` redefined here
